# libkubuntu

./: .gitignore  CMakeLists.txt  KubuntuConfig.cmake.in  main.cpp
autotests/: CMakeLists.txt  languagetest.cpp  localetest.cpp
debian/: changelog  control  copyright  libkubuntu-dev.install  libkubuntu0.install  libkubuntu0.symbols  libkubuntu1.install  libkubuntu1.symbols  rules
kconf_update/: CMakeLists.txt  libkubuntu-force-setlocale-rewrite-14-04.upd  libkubuntu-force-setlocale-rewrite.cpp
src/: CMakeLists.txt  busyoverlay.cpp  busyoverlay.h  busyoverlay.ui  export.h  l10n_language.cpp  l10n_language.h  l10n_languagecollection.cpp  l10n_languagecollection.h  l10n_languagecollection_p.h  l10n_locale.cpp  l10n_locale.h  language.cpp  language.h  locale.cpp  locale.h
